tests/ui/attributes/used_with_arg.stderr
error: unused attribute
  --> $DIR/used_with_arg.rs:16:1
   |
LL | #[used(compiler)]
   | ^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/used_with_arg.rs:14:1
   |
LL | #[used(compiler)]
   | ^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/used_with_arg.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/used_with_arg.rs:17:1
   |
LL | #[used(linker)]
   | ^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/used_with_arg.rs:15:1
   |
LL | #[used(linker)]
   | ^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/used_with_arg.rs:25:1
   |
LL | #[used]
   | ^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/used_with_arg.rs:24:1
   |
LL | #[used(linker)]
   | ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

